<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WithDrawActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_left"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/margin_left" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/back_arrow_top_margin"
        android:clickable="true"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla_light"
        android:text="@string/balance_title"
        android:textColor="@color/light_black"
        android:textSize="@dimen/balance_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/ivArrow"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toEndOf="@+id/ivArrow"
        app:layout_constraintTop_toTopOf="@+id/ivArrow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_phone_number"
        android:fontFamily="@font/karla_regular"
        android:text="@string/amount"
        android:textColor="@color/light_black"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/tvBalance" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAmount"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:digits="0123456789"
        android:inputType="number"
        android:layout_marginTop="@dimen/margin_top_small"
        android:background="@drawable/edittext_background_white"
        android:hint="@string/amount_hint"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:nextFocusDown="@+id/etCustomerName"
        android:paddingStart="@dimen/margin_left"
        android:paddingEnd="@dimen/margin_right"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/balance_top_margin"
        android:fontFamily="@font/karla_regular"
        android:text="@string/customer_name"
        android:textColor="@color/light_black"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/etAmount" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCustomerName"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:layout_marginTop="@dimen/margin_top_small"
        android:background="@drawable/edittext_background_drawable"
        android:hint="@string/customer_name_hint"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:nextFocusDown="@+id/tvPin"
        android:paddingStart="@dimen/margin_left"
        android:paddingEnd="@dimen/margin_right"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/tvCustomerName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/balance_top_margin"
        android:fontFamily="@font/karla_regular"
        android:text="@string/pin"
        android:textColor="@color/light_black"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/etCustomerName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPin"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:layout_marginTop="@dimen/margin_top_small"
        android:background="@drawable/edittext_background_white"
        android:hint="@string/pin_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_left"
        android:paddingEnd="@dimen/margin_right"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/tvPin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_withdraw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/middle_text_margin_top"
        android:background="@drawable/button_blue_bg"
        android:fontFamily="@font/karla_bold"
        android:text="@string/withdraw_"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide" />

</androidx.constraintlayout.widget.ConstraintLayout>