<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SuccessActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_left"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/margin_left" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/success_margin_top"
        android:src="@drawable/ic_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/middle_text_margin_top"
        android:fontFamily="@font/karla_medium"
        android:text="@string/congratulations"
        android:textColor="@color/light_black"
        android:textSize="@dimen/success_font_size"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/ivSuccess" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/success_text_font_size"
        android:fontFamily="@font/karla_medium"
        android:text="@string/congratulations_text"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/middle_text_margin_top"
        android:background="@drawable/button_green_bg"
        android:fontFamily="@font/karla_bold"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide" />

</androidx.constraintlayout.widget.ConstraintLayout>